# MATE-ROV

./: .gitignore  .gitmodules  Cargo.toml  Joy.py  README.md  blink.rs  float1.ino  src.rar
Archives/MPU/get_angles/: get_angles.ino
Archives/MPU/get_angles_acc/: get_angles_acc.ino
Archives/MPU/get_data/: get_data.ino
Archives/MPU/side_acc/side_acc/: side_acc.ino
Archives/MPU/sketch_240209a/: sketch_240209a.pde
Archives/communications/: Joy.py
Archives/gyro_motors/: Cargo.toml
Archives/gyro_motors/src/: main.rs
Archives/rust_tests/: Cargo.toml  README.md
Archives/rust_tests/src/: blink.rs  servo.rs  tt.rs
Archives/two_motors/src/: main.rs  other.rs
Float/bluetooth_advertising/: ArduinoLibraryFiles.ino  bluetooth_advertising.ino
Float/bluetooth_data/: bluetooth_data.ino
Float/code_float/: code_float.ino
Float/pressure_sensor/: pressure_sensor.ino
NanoArmPotAndServoPCA/: NanoArmPotAndServoPCA.ino
Rov/RoboticArm/: Calibration_Bras_ROV_V1.ino  arm_arduino_data_query.py  bras_controle_mesure.ino  bras_rov_28_04.ino  bras_rov_avec_test_moteur.ino
Rov/RoboticArm/bras_rov_avec_test_moteur/: bras_rov_avec_test_moteur.ino
Rov/Rust/: Joy.py
Rov/Rust/bidule/: Cargo.toml
Rov/Rust/bidule/src/: brouillon.rs  main.rs
Rov/Rust/code_qualif/: Cargo.toml
Rov/Rust/code_qualif/src/: motorbra.rs  pid.rs
Rov/Rust/mpuplots/: Cargo.toml
Rov/Rust/mpuplots/src/: main.rs
Rov/Rust/plot_mpu/: Cargo.toml
Rov/Rust/plot_mpu/src/: main.rs
Rov/Server/: CameraServerAndControls.py
Rov/bras_rov_28_04/: bras_rov_28_04.ino
Rov/communications/: Joy.py
Rov/float1/: float1.ino
Rov/motorRasp/: motorRasp.ino
code_float/: code_float.ino
communications/: Cargo.toml  Joy.py
communications/src/: main2.rs
get_angles/: get_angles.ino
get_angles_acc/: get_angles_acc.ino
get_data/: get_data.ino
motorRasp/: motorRasp.ino
side_acc/side_acc/: side_acc.ino
sketch_240209a/: sketch_240209a.pde
src/: gyro.rs  led.rs  main.rs  motor.rs
