[package]
name = "double_mot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#mbedded-hal = "0.2.7"
#sysfs_gpio="0.6.1"
[dependencies]
rppal = { version = "0.16.1", features = ["hal"] }
buttons= "0.5.0"

evdev="0.12.1"