[package]
name = "communications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#rppal = { version = "0.16.1", features = ["hal"] }
#embedded-hal = "0.2.7"
#byteorder = "1.4.3"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
serialport = "4.3.0"

[[bin]]
name="led"
path="src/led.rs"

[[bin]]
name="main2"
path="src/main2.rs"
