[package]
name = "brouillon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.4.0"
#linux-embedded-hal-pca = {version="0.4.0", package="linux-embedded-hal"}
linux-embedded-hal-mpu = {version="0.3.0", package="linux-embedded-hal"}
pwm-pca9685 = "1.0.0"
mpu6050 = "0.1.6"
rppal = {version="0.17.1",features=["hal"]}
nalgebra = "0.31.4"
tokio = {version="1", features=["full"]}
pid = "4.0.0"

[[bin]]
name="motor"
path="src/motor.rs"

[[bin]]
name="bras"
path="src/bras.rs"

[[bin]]
name="motorbra"
path="src/motorbra.rs"

[[bin]]
name="pid"
path="src/pid.rs"