[package]
name = "plot_mpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.112.0"
plotters = "0.3.5"
plotters-piston = "0.3.0"
mpu6050 = "0.1.6"
tokio = { version = "1", features = ["full"] }
linux-embedded-hal="0.3.0"
embedded-hal = "0.2.4"
